Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -39,7 +39,7 @@
   }
 
   @media (max-width: $screen-xs-max) {
-    overflow-y: visible;
+    overflow-y: auto;
     padding: 70px 0 0;
 
     &.hideFilter {
